<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/eventNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/eventAddressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/eventCityTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_wait"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/right_arrow"
        android:id="@+id/detailsBtn"/>
</LinearLayout>